src/test/ui/parser/trait-pub-assoc-ty.stderr
error: expected one of `async`, `const`, `extern`, `fn`, `type`, `unsafe`, or `}`, found `pub`
  --> $DIR/trait-pub-assoc-ty.rs:4:5
   |
LL | trait Foo {
   |            - expected one of 7 possible tokens here
LL |     pub type Foo;
   |     ^^^ unexpected token

error: aborting due to previous error

